--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ body {
     position: absolute;
     width: 100%;
     height: 5px;
+    left: 0;
     background-color: white;
     animation: underline 0.3s ease-in 1;
 }
