--- a/reservation.css
+++ b/reservation.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    min-height: 440px;
 }
 
 #reservation-form-container form {
@@ -91,6 +93,63 @@ input:focus, select:focus {
 
 .s-up {
     animation: size-up 0.5s ease 1;
+}
+
+#message-container {
+    width: 90vw;
+    height: max(30vh, 400px);
+    padding: 20px;
+    background-color: var(--red);
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 20px;
+    border-radius: 12px;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    transform: scale(0);
+}
+
+#message-container h1 {
+    font-size: 30px;
+    /* max-width: 80%; */
+    color: white;
+    margin-top: 0;
+}
+
+#message-container button {
+    background-color: black;
+    width: 150px;
+    padding: 15px;
+    border: none;
+    border-radius: 7px;
+    transition: all 0.5s ease;
+}
+
+#book-again {
+    color: white;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    text-decoration: none;
+}
+
+#message-container.show-message {
+    opacity: 1;
+    pointer-events: all;
+    transform: scale(1);
+}
+
+#reservation-form-container form.hide-form {
+    display: none;
+}
+
+.hide-form {
+    display: none;
 }
 
 @keyframes size-up {
