--- a/about.css
+++ b/about.css
@@ -1,3 +1,12 @@
+body.active-video {
+    overflow: hidden;
+    height: 100vh;
+}
+
+body {
+    overflow-x: hidden;
+}
+
 #about {
     background-image: url(./image/about/about-bg.jpg);
     text-align: center;
